[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steboxing"
version = "1.0.0"
description = "Put your text in a stylish box."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Cangreho" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/StefanoMazzuka/steboxing"
Repository = "https://github.com/StefanoMazzuka/steboxing"

[tool.setuptools.packages.find]
include = ["steboxing", "steboxing.*"]
